--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Web.config
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="GamingGuruConnection" connectionString="Server=.\SQLEXPRESS; Trusted_Connection=True; Initial Catalog=aspnet-GamingGuruBlog-20160422093135;" providerName="System.Data.SqlClient" />
+    <add name="GamingGuruConnection" connectionString="Server=.\SQLEXPRESS; Trusted_Connection=True; Initial Catalog=Blog;" providerName="System.Data.SqlClient" />
     
   </connectionStrings>
   <appSettings>
