--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/GamingGuruBlog.Web.csproj
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/GamingGuruBlog.Web.csproj
@@ -533,9 +533,9 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\GamingGuruBlog.Data\GamingGuruBlog.Data.csproj">
-      <Project>{757FEC43-FB0D-4046-AE61-D3526975E8BC}</Project>
-      <Name>GamingGuruBlog.Data</Name>
+    <ProjectReference Include="..\GamingGuruBlog.Domain\GamingGuruBlog.Domain.csproj">
+      <Project>{886d3c0c-5a80-47e1-87d3-77841d5197b4}</Project>
+      <Name>GamingGuruBlog.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
