--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Domain/GamingGuruBlog.Domain.csproj
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Domain/GamingGuruBlog.Domain.csproj
@@ -70,6 +70,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IServices.cs" />
     <Compile Include="Services.cs" />
     <Compile Include="Interfaces\IBlogCategoryRepository.cs" />
     <Compile Include="Interfaces\IBlogPostRepository.cs" />
