--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/GamingGuruBlog.Web.csproj
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/GamingGuruBlog.Web.csproj
@@ -242,7 +242,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="UIConverter.cs" />
+    <Compile Include="WebServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\app\CyborgTheme.css" />
