--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/GamingGuruBlog.Web.csproj
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/GamingGuruBlog.Web.csproj
@@ -255,6 +255,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Index.css" />
     <Content Include="Content\PagedList.css" />
+    <Content Include="Scripts\app\jquery.selectedTab.js" />
     <Content Include="Scripts\app\jquery.tagcanvas.min.js" />
     <Content Include="Scripts\app\tagcanvas.min.js" />
     <Content Include="Scripts\EasterEgg\hello2.mp3" />
