--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Domain/GamingGuruBlog.Domain.csproj
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Domain/GamingGuruBlog.Domain.csproj
@@ -70,6 +70,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoryServices.cs" />
     <Compile Include="Interfaces\IBlogServices.cs" />
     <Compile Include="BlogServices.cs" />
     <Compile Include="Interfaces\IBlogCategoryRepository.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StaticPageServices.cs" />
+    <Compile Include="TagServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
