--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Domain/GamingGuruBlog.Domain.csproj
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Domain/GamingGuruBlog.Domain.csproj
@@ -70,12 +70,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoryServices.cs" />
     <Compile Include="Interfaces\IBlogServices.cs" />
     <Compile Include="BlogServices.cs" />
     <Compile Include="Interfaces\IBlogCategoryRepository.cs" />
     <Compile Include="Interfaces\IBlogPostRepository.cs" />
     <Compile Include="Interfaces\IBlogTagRepository.cs" />
     <Compile Include="Interfaces\ICategoryRepository.cs" />
+    <Compile Include="Interfaces\IRole.cs" />
     <Compile Include="Interfaces\IStaticPageRepository.cs" />
     <Compile Include="Interfaces\IStaticPageServices.cs" />
     <Compile Include="Interfaces\ITagRepository.cs" />
@@ -84,11 +86,13 @@
     <Compile Include="Models\BlogPost.cs" />
     <Compile Include="Models\BlogTag.cs" />
     <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Role.cs" />
     <Compile Include="Models\StaticPage.cs" />
     <Compile Include="Models\Tag.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StaticPageServices.cs" />
+    <Compile Include="TagServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
