--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Domain/GamingGuruBlog.Domain.csproj
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Domain/GamingGuruBlog.Domain.csproj
@@ -96,7 +96,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\StaticPageServices.cs" />
     <Compile Include="Services\UserServices.cs" />
-    <Compile Include="TagServices.cs" />
+    <Compile Include="Services\TagServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
