copied solution from UserServicesImplementation branch

--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Domain/GamingGuruBlog.Domain.csproj
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Domain/GamingGuruBlog.Domain.csproj
@@ -70,9 +70,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BlogServices.cs" />
-    <Compile Include="CategoryServices.cs" />
+    <Compile Include="Interfaces\IUserServices.cs" />
+    <Compile Include="Services\CategoryServices.cs" />
     <Compile Include="Interfaces\IBlogServices.cs" />
+    <Compile Include="Services\BlogServices.cs" />
     <Compile Include="Interfaces\IBlogCategoryRepository.cs" />
     <Compile Include="Interfaces\IBlogPostRepository.cs" />
     <Compile Include="Interfaces\IBlogTagRepository.cs" />
@@ -82,8 +83,8 @@
     <Compile Include="Interfaces\IStaticPageRepository.cs" />
     <Compile Include="Interfaces\IStaticPageServices.cs" />
     <Compile Include="Interfaces\ITagRepository.cs" />
+    <Compile Include="Interfaces\ITagServices.cs" />
     <Compile Include="Interfaces\IUserRepository.cs" />
-    <Compile Include="Interfaces\IUserServices.cs" />
     <Compile Include="Models\BlogCategory.cs" />
     <Compile Include="Models\BlogPost.cs" />
     <Compile Include="Models\BlogTag.cs" />
@@ -93,9 +94,9 @@
     <Compile Include="Models\Tag.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StaticPageServices.cs" />
-    <Compile Include="TagServices.cs" />
-    <Compile Include="UserServices.cs" />
+    <Compile Include="Services\StaticPageServices.cs" />
+    <Compile Include="Services\UserServices.cs" />
+    <Compile Include="Services\TagServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
