--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Domain/GamingGuruBlog.Domain.csproj
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Domain/GamingGuruBlog.Domain.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Interfaces\IStaticPageRepository.cs" />
     <Compile Include="Interfaces\IStaticPageServices.cs" />
     <Compile Include="Interfaces\ITagRepository.cs" />
+    <Compile Include="Interfaces\ITagServices.cs" />
     <Compile Include="Interfaces\IUserRepository.cs" />
     <Compile Include="Models\BlogCategory.cs" />
     <Compile Include="Models\BlogPost.cs" />
