--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Domain/GamingGuruBlog.Domain.csproj
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Domain/GamingGuruBlog.Domain.csproj
@@ -70,22 +70,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Interfaces\IUserServices.cs" />
+    <Compile Include="Services\CategoryServices.cs" />
+    <Compile Include="Interfaces\IBlogServices.cs" />
+    <Compile Include="Services\BlogServices.cs" />
     <Compile Include="Interfaces\IBlogCategoryRepository.cs" />
     <Compile Include="Interfaces\IBlogPostRepository.cs" />
     <Compile Include="Interfaces\IBlogTagRepository.cs" />
     <Compile Include="Interfaces\ICategoryRepository.cs" />
+    <Compile Include="Interfaces\ICategoryServices.cs" />
+    <Compile Include="Interfaces\IRole.cs" />
     <Compile Include="Interfaces\IStaticPageRepository.cs" />
+    <Compile Include="Interfaces\IStaticPageServices.cs" />
     <Compile Include="Interfaces\ITagRepository.cs" />
+    <Compile Include="Interfaces\ITagServices.cs" />
     <Compile Include="Interfaces\IUserRepository.cs" />
     <Compile Include="Models\BlogCategory.cs" />
     <Compile Include="Models\BlogPost.cs" />
     <Compile Include="Models\BlogTag.cs" />
     <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Role.cs" />
     <Compile Include="Models\StaticPage.cs" />
     <Compile Include="Models\Tag.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\StaticPageServices.cs" />
+    <Compile Include="Services\UserServices.cs" />
+    <Compile Include="Services\TagServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
