--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/GamingGuruBlog.Web.csproj
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/GamingGuruBlog.Web.csproj
@@ -242,6 +242,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="UIServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\app\CyborgTheme.css" />
@@ -254,6 +255,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Index.css" />
     <Content Include="Content\PagedList.css" />
+    <Content Include="Scripts\app\jquery.selectedTab.js" />
     <Content Include="Scripts\app\jquery.tagcanvas.min.js" />
     <Content Include="Scripts\app\tagcanvas.min.js" />
     <Content Include="Scripts\EasterEgg\hello2.mp3" />
@@ -533,6 +535,10 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\GamingGuruBlog.Data\GamingGuruBlog.Data.csproj">
+      <Project>{757fec43-fb0d-4046-ae61-d3526975e8bc}</Project>
+      <Name>GamingGuruBlog.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GamingGuruBlog.Domain\GamingGuruBlog.Domain.csproj">
       <Project>{886d3c0c-5a80-47e1-87d3-77841d5197b4}</Project>
       <Name>GamingGuruBlog.Domain</Name>
