--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/GamingGuruBlog.Web.csproj
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/GamingGuruBlog.Web.csproj
@@ -291,6 +291,7 @@
     <Content Include="Scripts\EasterEgg\toasty.min.css" />
     <Content Include="Scripts\EasterEgg\toasty.mp3" />
     <Content Include="Scripts\EasterEgg\toasty.png" />
+    <Content Include="Scripts\app\getSelectedValue.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
