--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Domain/GamingGuruBlog.Domain.csproj
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Domain/GamingGuruBlog.Domain.csproj
@@ -70,7 +70,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\RoleIdEnum.cs" />
     <Compile Include="Interfaces\IUserServices.cs" />
+    <Compile Include="Models\UserRole.cs" />
     <Compile Include="Services\CategoryServices.cs" />
     <Compile Include="Interfaces\IBlogServices.cs" />
     <Compile Include="Services\BlogServices.cs" />
@@ -79,7 +81,7 @@
     <Compile Include="Interfaces\IBlogTagRepository.cs" />
     <Compile Include="Interfaces\ICategoryRepository.cs" />
     <Compile Include="Interfaces\ICategoryServices.cs" />
-    <Compile Include="Interfaces\IRole.cs" />
+    <Compile Include="Interfaces\IRoleRepository.cs" />
     <Compile Include="Interfaces\IStaticPageRepository.cs" />
     <Compile Include="Interfaces\IStaticPageServices.cs" />
     <Compile Include="Interfaces\ITagRepository.cs" />
